--- a/block-BJaaim/code/style.css
+++ b/block-BJaaim/code/style.css
@@ -1,13 +1,3 @@
-/* Variables */
-:root {
-  --primary: ;
-  --secondary: ;
-  --accent: ;
-  --textLight: ;
-  --textDark: ;
-  --background: ;
-}
-
 /* Meyers CSS Reset */
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
@@ -145,17 +135,19 @@ table {
   box-sizing: border-box;
 }
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
-input, textarea, button {
-    outline: 0;
-    border: 0;
-    box-shadow: none;
+input,
+textarea,
+button {
+  outline: 0;
+  border: 0;
+  box-shadow: none;
 }
 
 /* General */
 html {
-    font-size: 16px;
+  font-size: 16px;
 }
 body {
   font-size: 1rem;
@@ -173,210 +165,150 @@ body {
   padding: 0 2rem;
 }
 
-/* Flex  */
-.flex {
-  display: flex;
+/* Headers and Text */
+h1 {
+  font-size: 4rem;
+  text-align: center;
+  margin-top: 5rem;
+  color: cornflowerblue;
 }
-.column {
-    flex-direction: column;
-}
-.wrap {
-    flex-wrap: wrap;
-}
-.center {
-    justify-content: center;
-    align-items: center;
-}
-.justify-start {
-    justify-content: flex-start;
-}
-.justify-between {
-    justify-content: space-between;
-}
-.justify-end {
-    justify-content: flex-end;
-}
-.align-start {
-    align-items: flex-start;
-}
-.align-center {
-    align-items: center;
-}
-.align-end {
-    align-items: flex-end;
+p {
+  font-size: 1.4rem;
+  text-align: center;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+  font-weight: bold;
+  font-weight: 200;
 }
 
-/* Columns */
-.flex-15 {
-    flex: 0 1 15%;
-}
-.flex-20 {
-    flex: 0 1 20%;
-}
-.flex-25 {
-    flex: 0 1 25%;
-}
-.flex-30 {
-    flex: 0 1 30%;
-}
-.flex-40 {
-    flex: 0 1 40%;
-}
-.flex-48 {
-    flex: 0 1 48%;
-}
-.flex-50 {
-    flex: 0 1 50%;
-}
-.flex-60 {
-    flex: 0 1 60%;
-}
-.grow {
-    flex: 1 1 auto;
+/* List */
+li {
+  text-align: center;
+  border: 1px dashed black;
+  width: 50%;
+  margin: 0 auto;
 }
 
-/* Padding */
-.padding {
-  padding: 5rem 0;
+/* Inputs */
+input {
+  margin-left: 2rem;
+}
+.total {
+  margin-top: 0.5rem;
+  font-size: 1rem;
+}
+label {
+  margin-left: 1rem;
+}
+.option0 {
+  margin-left: 0;
 }
 
 /* Buttons */
-.btn {
-  display: inline-block;
-  padding: 0.9rem 2rem;
-  letter-spacing: 0.8px;
-  cursor: pointer;
-  background-color: var(--accent);
-  color: #ffffff;
-  transition: all 200ms ease-in-out;
-  font-size: 1.3rem;
-  border-radius: 4px;
-  font-weight: 600;
-  margin-top: 2rem;
-}
-.btn-primary {
-  border: 1px solid black;
-}
-.btn:hover {
-    box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-    opacity: 0.8;
-    color: #ffffff!important;
-}
-.btn-primary:hover {
-    background-color: var(--secondary);
-}
-
-/* Active Link */
-.active {
-    color: var(--primary);
-}
-
-/* Nav and General Links Hover */
-a:hover {
-    color: var(--primary);
-}
-
-/* Full Width */
-.width-full {
-    width: 100%;
-}
-
-/* Headings*/
-.heading {
-  font-size: 3rem;
-  color: var(--textDark);
+.next,
+.prev {
+  margin-top: 1rem;
+  font-size: 1rem;
+  background-color: cornflowerblue;
+  color: white;
+  padding: 0.9rem 2rem 0.9rem 2rem;
   margin-bottom: 2rem;
-  font-weight: 900;
-  text-transform: capitalize;
+  margin-left: 1rem;
+  border: 1px solid transparent;
+  border-radius: 20px;
 }
-.heading-secondary {
-    font-size: 2.2rem;
+.prev {
+  background-color: white;
+  border: 1px solid cornflowerblue;
+  color: cornflowerblue;
 }
-
-/* Text */
-.text-center {
-    text-align: center;
+.next:hover {
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  opacity: 0.8;
+  color: #ffffff !important;
 }
-.text-right {
-    text-align: right;
+.prev:hover {
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  opacity: 0.8;
+  color: cornflowerblue !important;
 }
-.text-accent {
-    color: var(--accent);
+.btn3 {
+  margin-top: 1rem;
+  font-size: 1rem;
+  background-color: cornflowerblue;
+  color: white;
+  padding: 0.9rem 1rem 0.9rem 1rem;
+  margin-bottom: 2rem;
+  margin-left: 1rem;
+  border: 1px solid transparent;
 }
-.uppercase {
-    text-transform: uppercase;
+.btn3 {
+  width: 220px;
+  height: 50px;
+  border: none;
+  outline: none;
+  color: #fff;
+  background: white;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 40px;
 }
-.font-0 {
-    font-size: 0;
-}
-
-/* Clearfix */
-.clearfix::before,
-.clearfix::after {
+.btn3:before {
   content: "";
-  display: table;
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing 20s linear infinite;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
 }
-.clearfix::after {
-  clear: both;
+.btn3:active {
+  color:white ;
 }
-
-/* 
-1)Common Tags that I forget:
-<nav>
-<fieldset>
-<figure>
-<article>
-<aside>
-
-2) Use max-width, max-height for images and tables
-
-3) Add viewport meta tag to HTML
-
-4) Code in 'rem'
- */
-
-
- h1 {
-     font-size: 4rem;
-     text-align: center;
-     margin-top: 1rem;
-     color:cornflowerblue;
-     margin-bottom: 2rem;
- }
-p {
-    font-size: 1.4rem;
-    text-align: center;
-    margin-bottom: 2rem;
-    margin-top: 2rem;
-    font-weight: bold;
-    font-weight: 200;
+.btn3:active:after {
+  background: cornflowerblue;
 }
-li {
-    text-align: center;
-    border: 1px solid black;
-    width: 50%;
-    margin: 0 auto;
+.btn3:hover:before {
+  opacity: 1;
 }
-input {
-    margin-left: 2rem;
+.btn3:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: cornflowerblue;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
 }
-
-label {
-    margin-left: 2rem;
+@keyframes glowing {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
 }
-
-button, .prev {
-    margin-top: 2rem;
-    font-size: 1rem;
-    background-color:cornflowerblue;
-    color: white;
-    padding: 0.9rem 1rem 0.9rem 1rem;
-    margin-bottom: 2rem;
-    margin-left: 1rem;
-}
-button:hover, .prev:hover {
-    box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-    opacity: 0.8;
-    color: #ffffff!important;
-}
-
